--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 		    <artifactId>selenium-java</artifactId>
 		    <version>4.15.0</version>
 		</dependency>
+		
+		 <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.14.0</version>
+        </dependency>
 
 	</dependencies>
 	
